<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CostumerActivity"
    >


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/welcome_user_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:textSize="24sp"
                android:gravity="center"
                android:textColor="@color/black" />

            <LinearLayout
                android:id="@+id/btn_logout_layout"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="6dp"
                    android:src="@android:drawable/ic_menu_revert"
                    app:tint="#E53935" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/signout_text"
                    android:textColor="#E53935"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>




        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E0E0E0"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        android:padding="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/new_appointment_layout"
        android:layout_height="100dp"
        android:padding="20dp"
        android:clickable="true"
        android:background="@drawable/blue_bg_border">
        <ImageView
            android:id="@+id/calendar_image"
            android:layout_width="60dp"
            android:layout_height="75dp"
            android:src="@drawable/calendar"
            android:scaleType="centerCrop"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/calendar_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <TextView
                android:id="@+id/calendar_main_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="top"
                android:text="@string/new_appointment_main"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/calendar_second_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:paddingStart="4dp"

                android:text="@string/new_appointment_sub"
                android:textColor="@color/dark_gray" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:padding="20dp"
        android:orientation="vertical"
        android:background="@drawable/white_bg_border">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_appointments"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/black"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.fragment.app.FragmentContainerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/close_appointments_container"/>
        </RelativeLayout>




    </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>